force-app/main/default/objects/SSP_Asset__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <description>This field is used to store policy number for an asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>