force-app/main/default/objects/SSP_Asset__c/fields/PreFuneralAgmtGoodsAndServicesCost__c.field-meta.xml
<CustomField>
    <fullName>PreFuneralAgmtGoodsAndServicesCost__c</fullName>
    <description>This field is used to store pre funeral Goods and service cost for an asset</description>
    <label>Pre Funeral Goods and Services Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>