force-app/main/default/objects/SSP_Asset__c/fields/PrimaryPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhoneNumber__c</fullName>
    <description>Primary phone number details</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Primary Phone Number</label>
    <type>Phone</type>
</CustomField>