force-app/main/default/objects/SSP_Asset__c/fields/PrimaryUserIfOther__c.field-meta.xml
<CustomField>
    <fullName>PrimaryUserIfOther__c</fullName>
    <description>This field is used to store primary user if other for an asset</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Primary User If Other ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>