force-app/main/default/objects/SSP_Asset__c/fields/PrimaryUserIndividual__c.field-meta.xml
<CustomField>
    <fullName>PrimaryUserIndividual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store primary individual from household for an asset</description>
    <label>Primary User of this Vehicle</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>SSPMemberPUI</relationshipName>
    <type>Lookup</type>
</CustomField>