force-app/main/default/objects/SSP_Asset__c/fields/ProviderName__c.field-meta.xml
<CustomField>
    <fullName>ProviderName__c</fullName>
    <description>This field captures name of the individual of the care provider</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>