force-app/main/default/objects/SSP_Asset__c/fields/RealEstateFairMarketValue__c.field-meta.xml
<CustomField>
    <fullName>RealEstateFairMarketValue__c</fullName>
    <description>This field is used to store Property fair market value for an asset</description>
    <label>Property Fair Market Value ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>