force-app/main/default/objects/SSP_Asset__c/fields/ReceiveInHouseAssistance__c.field-meta.xml
<CustomField>
    <fullName>ReceiveInHouseAssistance__c</fullName>
    <description>This field is used to indicate whether a member receives in house assistance for an asset</description>
    <label>Receives In House Assistance ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>