force-app/main/default/objects/SSP_Asset__c/fields/ResourceEndReason__c.field-meta.xml
<CustomField>
    <fullName>ResourceEndReason__c</fullName>
    <description>This field is used to store end reason for an asset</description>
    <label>Resource End Reason</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>ResourceTypeCode__c</controllingField>
        
            <restricted>true</restricted>
        
            <valueSetName>ResourceEndReason</valueSetName>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        </valueSet>
</CustomField>