force-app/main/default/objects/SSP_Asset__c/fields/ResourceSubTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ResourceSubTypeCode__c</fullName>
    <description>This field is used to store resource sub type for an asset</description>
    <label>Resource SubType</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>ResourceTypeCode__c</controllingField>
        
            <restricted>true</restricted>
        
            <valueSetName>ResourceSubType</valueSetName>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        </valueSet>
</CustomField>