force-app/main/default/objects/SSP_Asset__c/fields/ResourceTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ResourceTypeCode__c</fullName>
    <description>This field is used to store resource type for an asset</description>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>ResourceType</valueSetName>
        
        </valueSet>
</CustomField>