force-app/main/default/objects/SSP_Asset__c/fields/SSP_Application__c.field-meta.xml
<CustomField>
    <fullName>SSP_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to identify the related application on an Asset</description>
    <label>SSP Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipName>SSP_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>