force-app/main/default/objects/SSP_Asset__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <description>This field is used to store state for an address on an asset</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>