force-app/main/default/objects/SSP_Asset__c/fields/Tips__c.field-meta.xml
<CustomField>
    <fullName>Tips__c</fullName>
    <description>This field is used to store tips on an asset</description>
    <label>Tips</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>