force-app/main/default/objects/SSP_Asset__c/fields/TotalGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossAmount__c</fullName>
    <description>This field is used to store total gross amount on an asset</description>
    <label>Total Gross Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>