force-app/main/default/objects/SSP_Asset__c/fields/TuitionAmount__c.field-meta.xml
<CustomField>
    <fullName>TuitionAmount__c</fullName>
    <description>This field is used to store tuition amount on an asset</description>
    <label>Tuition Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>