force-app/main/default/objects/SSP_Asset__c/fields/VehicleCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>VehicleCategoryCode__c</fullName>
    <description>This field is used to store vehicle category on an asset</description>
    <label>Vehicle Category</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>VehicleCategory</valueSetName>
        
        </valueSet>
</CustomField>