force-app/main/default/objects/SSP_Asset__c/fields/VehicleDebt__c.field-meta.xml
<CustomField>
    <fullName>VehicleDebt__c</fullName>
    <description>Used to store the current Amount Owned for Vehicle</description>
    <label>Current Amount Owned for Vehicle ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>