force-app/main/default/objects/SSP_Asset__c/fields/VehicleFairMarketValue__c.field-meta.xml
<CustomField>
    <fullName>VehicleFairMarketValue__c</fullName>
    <description>Used to store the current value of a vehicle</description>
    <label>Current value of vehicle ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>