force-app/main/default/objects/SSP_Asset__c/fields/VehicleUseReason__c.field-meta.xml
<CustomField>
    <fullName>VehicleUseReason__c</fullName>
    <description>This field is used to store vehicle use reason for an asset</description>
    <label>Primarily Vehicle Is Used for</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>VehicleUse</valueSetName>
        
        </valueSet>
</CustomField>