force-app/main/default/objects/SSP_Asset__c/fields/ZipCode4__c.field-meta.xml
<CustomField>
    <fullName>ZipCode4__c</fullName>
    <description>This field is used to store four digit zip code for an address on an asset</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code(Four Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>