force-app/main/default/objects/SSP_Asset__c/fields/ZipCode5__c.field-meta.xml
<CustomField>
    <fullName>ZipCode5__c</fullName>
    <description>This field is used to store five digit zip code for an address on an asset</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code(Five Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>