force-app/main/default/objects/SSP_Asset__c/recordTypes/Resource.recordType-meta.xml
<RecordType>
    <fullName>Resource</fullName>
    <active>true</active>
    <label>SSPResource</label>
</RecordType>